specs/blueprints/errors/validation/expected_field_got_fields.eno
# Expecting a field but getting two fields

-- input
field: value
field: value
-- input

-- javascript
parse(input).field('field');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field');
-- php

-- python
enolib.parse(input).field('field')
-- python

-- ruby
Enolib.parse(input).field('field')
-- ruby

## ValidationError

-- text
Only a single field with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
 >    2 | field: value
-- snippet

selection: [0,0] => [0,12]

# Expecting a field but getting two fields with comments, empty lines and continuations

-- input
> comment
field: value
\ continuation

\ continuation

field: value
> comment
| continutation
-- input

-- javascript
parse(input).field('field');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field');
-- php

-- python
enolib.parse(input).field('field')
-- python

-- ruby
Enolib.parse(input).field('field')
-- ruby

## ValidationError

-- text
Only a single field with the key 'field' was expected.
-- text

-- snippet
   Line | Content
      1 | > comment
 >    2 | field: value
 *    3 | \ continuation
 *    4 | 
 *    5 | \ continuation
      6 | 
 >    7 | field: value
 *    8 | > comment
 *    9 | | continutation
-- snippet

selection: [1,0] => [4,14]
